--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "covalenceexpressapis",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,15 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nklsmbailey/Express-API.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nklsmbailey/Express-API/issues"
+  },
+  "homepage": "https://github.com/nklsmbailey/Express-API#readme",
+  "description": ""
 }
